tests/error/named_union_global_private_static.gw
// [contains] 'static' can only be used at class scope.
private static union { int i; } u;
